--- a/todo_project/todo_project/templates/about.html
+++ b/todo_project/todo_project/templates/about.html
@@ -7,7 +7,7 @@
     <legend class="border-bottom mb-4">{{ title }}</legend>
 
     <p>
-        This Project is developed by <b><i>Aditya Bagad</i></b>
+        Ouro do vale alpha <b><i>Versão 0.1</i></b>
     </p>
 </div>
 
